Updated CV elements

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,91 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Eszter Lakatos at 2023-08-14 10:52:26 +0200 
+%% Created for Eszter Lakatos at 2024-08-29 15:16:22 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{SwinyardA25,
+	abstract = {Background Lynch syndrome (LS) is a hereditary condition characterised by heterozygous pathogenic germline mutation or hypermethylation of one of the mismatch repair (MMR) genes, predisposing carriers to a variety of cancers, predominantly colorectal cancer (CRC). The somatic loss of the remaining functional allele results in complete MMR deficiency (MMR-d), however the sequence and timing of events in the trajectory towards LS lesions are not fully understood. Additionally, how immune surveillance responds to single MMR-d crypt foci (MMR-dcf) has not been examined. We explored the earliest interactions between MMR-dcf and the immune microenvironment in the LS bowel to characterise the co-evolution of MMR-d clones and the immune system.Methods Prospective and retrospective colon tissue samples were collected from 32 confirmed LS patients. The samples were classified as normal from a LS colon free of cancer (n=13), normal from a LS colon with a distant cancer (n=6) or adenoma adjacent normal tissue (n=13). The frequency and location of MMR-dcf were identified through immunohistochemical staining for MMR proteins. Multiplexed, whole-slide cyclic immunofluorescence (CyCIF) was performed to characterise the immune microenvironment surrounding MMR-dcf using a panel of 21 markers, including those identifying T cells, B cells, macrophages, neutrophils, and immune checkpoints. Single cell segmentation and marker quantification compared the immune landscape of MMR proficient (MMR-p) and MMR-d patches in non-dysplastic and diseased tissue.Results Morphologically normal MMR-d crypts were primarily found in adenoma adjacent areas (n = 194/7256 crypts (2.7\%), found in 6/13 patients) compared to in the healthy LS mucosa (n = 1/4087 crypts (0.02\%), found in 1/13 patients, p = 0.0276 t test), with the patch size increasing with patient age. This suggests that MMR-dcf occur very rarely in the non-dysplastic LS colon, or that they are effectively removed by negative selection or immune predation. Interestingly, non-neoplastic MMR-d patches are only seen next to MMR-d polyps. Our CyCIF analysis of the immune microenvironment revealed that MMR-d and MMR-p crypts have distinct immune neighbourhoods, with MMR-dcf characterised by increased infiltration of cytotoxic T cells and B cells, but no change in regulatory T cells or macrophages. This suggests an active inflammatory response to MMR-d, but no evidence of negative selection of these populations was seen. Staining and genomic sequencing showed a loss of HLA expression in a subset of MMR-d patches, a possible immune evasion mechanism that could explain the lack of immune eradication of these early mutated populations.Conclusion We present evidence that patches of morphologically normal MMR-dcf are more prevalent adjacent to adenomas, but rare in the healthy LS bowel. These foci appear to evoke a cytotoxic immune response, whilst evading immune elimination. Together our data indicate a critical role for immunosurveillance in the genesis of LS-associated CRC, highlighting potential opportunities for chemoprevention.},
+	author = {Swinyard, Ottilie and Baker, Ann-Marie and Monahan, Kevin and Jansen, Marnix and Gabbutt, Calum and Kimberley, Chris and Graham, Trevor and Househam, Jacob and Lakatos, Eszter},
+	date-added = {2024-08-29 15:16:15 +0200},
+	date-modified = {2024-08-29 15:16:15 +0200},
+	doi = {10.1136/gutjnl-2023-BSG.43},
+	eprint = {https://gut.bmj.com/content/72/Suppl_2/A25.2.full.pdf},
+	issn = {0017-5749},
+	journal = {Gut},
+	number = {Suppl 2},
+	pages = {A25--A26},
+	publisher = {BMJ Publishing Group},
+	title = {O44 Co-evolution of mismatch repair loss and the immune response in Lynch Syndrome},
+	url = {https://gut.bmj.com/content/72/Suppl_2/A25.2},
+	volume = {72},
+	year = {2023},
+	bdsk-url-1 = {https://gut.bmj.com/content/72/Suppl_2/A25.2},
+	bdsk-url-2 = {https://doi.org/10.1136/gutjnl-2023-BSG.43}}
+
+@article{Lakatos2024.02.12.579956,
+	abstract = {Immune system control is a major hurdle that cancer evolution must circumvent. The relative timing and evolutionary dynamics of subclones that have escaped immune control remain incompletely characterized, and how immune-mediated selection shapes the epigenome has received little attention. Here, we infer the genome- and epigenome-driven evolutionary dynamics of tumour-immune coevolution within primary colorectal cancers (CRCs). We utilise our existing CRC multi-region multi-omic dataset that we supplement with high-resolution spatially-resolved neoantigen sequencing data and highly multiplexed imaging of the tumour microenvironment (TME). Analysis of somatic chromatin accessibility alterations (SCAAs) reveals frequent somatic loss of accessibility at antigen presenting genes, and that SCAAs contribute to silencing of neoantigens. We observe that strong immune escape and exclusion occur at the outset of CRC formation, and that within tumours, including at the microscopic level of individual tumour glands, additional immune escape alterations have negligible consequences for the immunophenotype of cancer cells. Further minor immuno-editing occurs during local invasion and is associated with TME reorganisation, but that evolutionary bottleneck is relatively weak. Collectively, we show that immune evasion in CRC follows a {\textquotedblleft}Big Bang{\textquotedblright} evolutionary pattern, whereby genetic, epigenetic and TME-driven immune evasion acquired by the time of transformation defines subsequent cancer-immune evolution.Competing Interest StatementT.A.G. and A.M.B. are listed as coinventors on patent application GB2305655.9 that concerns T-cell receptor sequencing of cancers, and T.A.G. is a coinventor on patent application GB2317139.0 that concerns measurement of cancer evolutionary dynamics. T.A.G. has received an honorarium from Genentech Inc.},
+	author = {Lakatos, Eszter and Gunasri, Vinaya and Zapata, Luis and Househam, Jacob and Heide, Timon and Trahearn, Nicholas and Swinyard, Ottilie and Cisneros, Luis and Lynn, Claire and Mossner, Maximilian and Kimberley, Chris and Spiteri, Inmaculada and Cresswell, George D. and Llibre-Palomar, Gerard and Mitchison, Miriam and Maley, Carlo C. and Jansen, Marnix and Rodriguez-Justo, Manuel and Bridgewater, John and Baker, Ann-Marie and Sottoriva, Andrea and Graham, Trevor A.},
+	date-added = {2024-08-29 15:15:27 +0200},
+	date-modified = {2024-08-29 15:15:27 +0200},
+	doi = {10.1101/2024.02.12.579956},
+	elocation-id = {2024.02.12.579956},
+	eprint = {https://www.biorxiv.org/content/early/2024/02/14/2024.02.12.579956.full.pdf},
+	journal = {bioRxiv},
+	publisher = {Cold Spring Harbor Laboratory},
+	title = {Epigenome and early selection determine the tumour-immune evolutionary trajectory of colorectal cancer},
+	url = {https://www.biorxiv.org/content/early/2024/02/14/2024.02.12.579956},
+	year = {2024},
+	bdsk-url-1 = {https://www.biorxiv.org/content/early/2024/02/14/2024.02.12.579956},
+	bdsk-url-2 = {https://doi.org/10.1101/2024.02.12.579956}}
+
+@article{Kayhanian:2024aa,
+	abstract = {Mismatch repair (MMR)-deficient cancer evolves through the stepwise erosion of coding homopolymers in target genes. Curiously, the MMR genes MutS homolog 6 (MSH6) and MutS homolog 3 (MSH3) also contain coding homopolymers, and these are frequent mutational targets in MMR-deficient cancers. The impact of incremental MMR mutations on MMR-deficient cancer evolution is unknown. Here we show that microsatellite instability modulates DNA repair by toggling hypermutable mononucleotide homopolymer runs in MSH6 and MSH3 through stochastic frameshift switching. Spontaneous mutation and reversion modulate subclonal mutation rate, mutation bias and HLA and neoantigen diversity. Patient-derived organoids corroborate these observations and show that MMR homopolymer sequences drift back into reading frame in the absence of immune selection, suggesting a fitness cost of elevated mutation rates. Combined experimental and simulation studies demonstrate that subclonal immune selection favors incremental MMR mutations. Overall, our data demonstrate that MMR-deficient colorectal cancers fuel intratumor heterogeneity by adapting subclonal mutation rate and diversity to immune selection.},
+	author = {Kayhanian, Hamzeh and Cross, William and van der Horst, Suzanne E. M. and Barmpoutis, Panagiotis and Lakatos, Eszter and Caravagna, Giulio and Zapata, Luis and Van Hoeck, Arne and Middelkamp, Sjors and Litchfield, Kevin and Steele, Christopher and Waddingham, William and Patel, Dominic and Milite, Salvatore and Jin, Chen and Baker, Ann-Marie and Alexander, Daniel C. and Khan, Khurum and Hochhauser, Daniel and Novelli, Marco and Werner, Benjamin and van Boxtel, Ruben and Hageman, Joris H. and Buissant des Amorie, Julian R. and Linares, Josep and Ligtenberg, Marjolijn J. L. and Nagtegaal, Iris D. and Lacl{\'e}, Miangela M. and Moons, Leon M. G. and Brosens, Lodewijk A. A. and Pillay, Nischalan and Sottoriva, Andrea and Graham, Trevor A. and Rodriguez-Justo, Manuel and Shiu, Kai-Keen and Snippert, Hugo J. G. and Jansen, Marnix},
+	date = {2024/07/01},
+	date-added = {2024-08-29 15:15:05 +0200},
+	date-modified = {2024-08-29 15:15:05 +0200},
+	doi = {10.1038/s41588-024-01777-9},
+	id = {Kayhanian2024},
+	isbn = {1546-1718},
+	journal = {Nature Genetics},
+	number = {7},
+	pages = {1420--1433},
+	title = {Homopolymer switches mediate adaptive mutability in mismatch repair-deficient colorectal cancer},
+	url = {https://doi.org/10.1038/s41588-024-01777-9},
+	volume = {56},
+	year = {2024},
+	bdsk-url-1 = {https://doi.org/10.1038/s41588-024-01777-9}}
+
+@article{Cornish:2024aa,
+	abstract = {Colorectal carcinoma (CRC) is a common cause of mortality1, but a comprehensive description of its genomic landscape is lacking2--9. Here we perform whole-genome sequencing of 2,023 CRC samples from participants in the UK 100,000 Genomes Project, thereby providing a highly detailed somatic mutational landscape of this cancer. Integrated analyses identify more than 250 putative CRC driver genes, many not previously implicated in CRC or other cancers, including several recurrent changes outside the coding genome. We extend the molecular pathways involved in CRC development, define four new common subgroups of microsatellite-stable CRC based on genomic features and show that these groups have independent prognostic associations. We also characterize several rare molecular CRC subgroups, some with potential clinical relevance, including cancers with both microsatellite and chromosomal instability. We demonstrate a spectrum of mutational profiles across the colorectum, which reflect aetiological differences. These include the role of Escherichia colipks+ colibactin in rectal cancers10 and the importance of the SBS93 signature11--13, which suggests that diet or smoking is a risk factor. Immune-escape driver mutations14 are near-ubiquitous in hypermutant tumours and occur in about half of microsatellite-stable CRCs, often in the form of HLA copy number changes. Many driver mutations are actionable, including those associated with rare subgroups (for example, BRCA1 and IDH1), highlighting the role of whole-genome sequencing in optimizing patient care.},
+	author = {Cornish, Alex J. and Gruber, Andreas J. and Kinnersley, Ben and Chubb, Daniel and Frangou, Anna and Caravagna, Giulio and Noyvert, Boris and Lakatos, Eszter and Wood, Henry M. and Thorn, Steve and Culliford, Richard and Arnedo-Pac, Claudia and Househam, Jacob and Cross, William and Sud, Amit and Law, Philip and Leathlobhair, Maire Ni and Hawari, Aliah and Woolley, Connor and Sherwood, Kitty and Feeley, Nathalie and G{\"u}l, G{\"u}ler and Fernandez-Tajes, Juan and Zapata, Luis and Alexandrov, Ludmil B. and Murugaesu, Nirupa and Sosinsky, Alona and Mitchell, Jonathan and Lopez-Bigas, Nuria and Quirke, Philip and Church, David N. and Tomlinson, Ian P. M. and Sottoriva, Andrea and Graham, Trevor A. and Wedge, David C. and Houlston, Richard S.},
+	date = {2024/08/07},
+	date-added = {2024-08-29 15:14:59 +0200},
+	date-modified = {2024-08-29 15:14:59 +0200},
+	doi = {10.1038/s41586-024-07747-9},
+	id = {Cornish2024},
+	isbn = {1476-4687},
+	journal = {Nature},
+	title = {The genomic landscape of 2,023 colorectal cancers},
+	url = {https://doi.org/10.1038/s41586-024-07747-9},
+	year = {2024},
+	bdsk-url-1 = {https://doi.org/10.1038/s41586-024-07747-9}}
+
+@inproceedings{nowinski2024lower,
+	author = {Nowinski, Salpie and Balarajah, Vickna and Baker, Ann-Marie and Katainen, Riku and Hughes, Christine and Guo, Qingli and Zapata, Luis and Lakatos, Eszter and Kocher, Hemant M and Graham, Trevor A},
+	booktitle = {CANCER RESEARCH},
+	date-added = {2024-08-29 15:14:11 +0200},
+	date-modified = {2024-08-29 15:14:11 +0200},
+	number = {3},
+	organization = {AMER ASSOC CANCER RESEARCH 615 CHESTNUT ST, 17TH FLOOR, PHILADELPHIA, PA~{\ldots}},
+	title = {Lower incidence of small intestinal adenocarcinomas may be due to constrained copy number karyotype and increased immune surveillance},
+	volume = {84},
+	year = {2024}}
 
 @article{Barroux:2023aa,
 	abstract = {Locally advanced oesophageal adenocarcinoma (EAC) remains difficult to treat because of common resistance to neoadjuvant therapy and high recurrence rates. The ecological and evolutionary dynamics responsible for treatment failure are incompletely understood. Here, we performed a comprehensive multi-omic analysis of samples collected from EAC patients in the MEMORI clinical trial, revealing major changes in gene expression profiles and immune microenvironment composition that did not appear to be driven by changes in clonal composition. Multi-region multi-timepoint whole exome (300x depth) and paired transcriptome sequencing was performed on 27 patients pre-, during and after neoadjuvant treatment. EAC showed major transcriptomic changes during treatment with upregulation of immune and stromal pathways and oncogenic pathways such as KRAS, Hedgehog and WNT. However, genetic data revealed that clonal sweeps were rare, suggesting that gene expression changes were not clonally driven. Additional longitudinal image mass cytometry was performed in a subset of 15 patients and T-cell receptor sequencing in 10 patients, revealing remodelling of the T-cell compartment during treatment and other shifts in microenvironment composition. The presence of immune escape mechanisms and a lack of clonal T-cell expansions were linked to poor clinical treatment response. This study identifies profound transcriptional changes during treatment with limited evidence that clonal replacement is the cause, suggesting phenotypic plasticity and immune dynamics as mechanisms for therapy resistance with pharmacological relevance.},
@@ -39,38 +118,6 @@
 	title = {Evolutionary and immune microenvironment dynamics during neoadjuvant treatment of oesophagael adenocarcinoma.},
 	year = {2023},
 	bdsk-url-1 = {https://doi.org/10.21203/rs.3.rs-2738048/v1}}
-
-@article{Cornish2022.11.16.515599,
-	abstract = {To characterise the somatic alterations in colorectal cancer (CRC), we conducted whole-genome sequencing analysis of 2,023 tumours. We provide the most detailed high-resolution map to date of somatic mutations in CRC, and demonstrate associations with clinicopathological features, in particular location in the large bowel. We refined the mutational processes and signatures acting in colorectal tumorigenesis. In analyses across the sample set or restricted to molecular subtypes, we identified 185 CRC driver genes, of which 117 were previously unreported. New drivers acted in various molecular pathways, including Wnt (CTNND1, AXIN1, TCF3), TGF-β/BMP (TGFBR1) and MAP kinase (RASGRF1, RASA1, RAF1, and several MAP2K and MAP3K loci). Non-coding drivers included intronic neo-splice site alterations in APC and SMAD4. Whilst there was evidence of an excess of mutations in functionally active regions of the non-coding genome, no specific drivers were called with high confidence. Novel recurrent copy number changes included deletions of PIK3R1 and PWRN1, as well as amplification of CCND3 and NEDD9. Putative driver structural variants included BRD4 and SOX9 regulatory elements, and ACVR2A and ANKRD11 hotspot deletions. The frequencies of many driver mutations, including somatic Wnt and Ras pathway variants, showed a gradient along the colorectum. The Pks-pathogenic E. coli signature and TP53 mutations were primarily associated with rectal cancer. A set of unreported immune escape driver genes was found, primarily in hypermutated CRCs, most of which showed evidence of genetic evasion of the anti-cancer immune response. About 25\% of cancers had a potentially actionable mutation for a known therapy. Thirty-three of the new driver genes were predicted to be essential, 17 possessed a druggable structure, and nine had a bioactive compound available. Our findings provide further insight into the genetics and biology of CRC, especially tumour subtypes defined by genomic instability or clinicopathological features.Competing Interest StatementThe authors have declared no competing interest.},
-	author = {Alex J. Cornish and Andreas J. Gruber and Ben Kinnersley and Daniel Chubb and Anna Frangou and Giulio Caravagna and Boris Noyvert and Eszter Lakatos and Henry M. Wood and Claudia Arnedo-Pac and Richard Culliford and Jacob Househam and William Cross and Amit Sud and Philip Law and Maire Ni Leathlobhair and Aliah Hawari and Steve Thorn and Kitty Sherwood and G{\"u}ler G{\"u}l and Juan Fernandez-Tajes and Luis Zapata and Ludmil B. Alexandrov and Nirupa Murugaesu and Alona Sosinsky and Jonathan Mitchell and Genomics England Research Consortium and Nuria Lopez-Bigas and Philip Quirke and David N Church and Ian P.M. Tomlinson and Andrea Sottoriva and Trevor A. Graham and David C. Wedge and Richard S. Houlston},
-	date-added = {2023-08-14 10:47:36 +0200},
-	date-modified = {2023-08-14 10:47:36 +0200},
-	doi = {10.1101/2022.11.16.515599},
-	elocation-id = {2022.11.16.515599},
-	eprint = {https://www.biorxiv.org/content/early/2022/11/16/2022.11.16.515599.full.pdf},
-	journal = {bioRxiv},
-	publisher = {Cold Spring Harbor Laboratory},
-	title = {Whole genome sequencing of 2,023 colorectal cancers reveals mutational landscapes, new driver genes and immune interactions},
-	url = {https://www.biorxiv.org/content/early/2022/11/16/2022.11.16.515599},
-	year = {2022},
-	bdsk-url-1 = {https://www.biorxiv.org/content/early/2022/11/16/2022.11.16.515599},
-	bdsk-url-2 = {https://doi.org/10.1101/2022.11.16.515599}}
-
-@article{Kayhanian2022.03.06.482973,
-	abstract = {Mutation rate optimisation drives evolution and immune evasion of bacteria and lentiviral strains, including HIV. Whether evolving cancer lineages similarly adapt mutation rates to increase tumour cell fitness is unknown. Here, by mapping the clonal topography of mismatch repair-deficient (MMRd) colorectal cancer, we show that genomic MMRd mutability co-evolves with neoantigen selection to drive intratumour diversification and immune escape. Mechanistically, we find that microsatellite instability modulates subclonal DNA repair by toggling two hypermutable mononucleotide homopolymer runs in the mismatch repair genes MSH6 and MSH3 (C8 and A8, respectively) through stochastic frameshift switching. Spontaneous mutation and reversion at these evolvability switches modulates subclonal mutation rate, mutation bias, and clonal HLA diversity during MMRd cancer evolution. Combined experimental and simulation studies demonstrate that subclonal immune selection favours incremental MMR mutations. MMRd cancers thus fuel intratumour heterogeneity by adapting subclonal mutation rate and mutation bias to immune selection, revealing a conserved co-evolutionary arms race between neoantigen selection and adaptive genomic mutability. Our work reveals layers of mutational complexity and microsatellite biology in MMRd cancer evolution previously hidden in bulk analyses.Competing Interest StatementThe authors have declared no competing interest.},
-	author = {Hamzeh Kayhanian and Panagiotis Barmpoutis and Eszter Lakatos and William Cross and Giulio Caravagna and Luis Zapata and Kevin Litchfield and Christopher Steele and William Waddingham and Dominic Patel and Salvatore Milite and Chen Jin and Ann-Marie Baker and Christopher Ross and Daniel Alexander and Khurum Khan and Daniel Hochhauser and Marco Novelli and Benjamin Werner and Naomi Guppy and Josep Linares and Genomics England Research Consortium and Marjolijn J.L. Ligtenberg and Iris D. Nagtegaal and Andrea Sottoriva and Trevor Graham and Nischalan Pillay and Manuel Rodriguez-Justo and Kai-Keen Shiu and Marnix Jansen},
-	date-added = {2023-08-14 10:47:12 +0200},
-	date-modified = {2023-08-14 10:47:12 +0200},
-	doi = {10.1101/2022.03.06.482973},
-	elocation-id = {2022.03.06.482973},
-	eprint = {https://www.biorxiv.org/content/early/2022/03/07/2022.03.06.482973.full.pdf},
-	journal = {bioRxiv},
-	publisher = {Cold Spring Harbor Laboratory},
-	title = {Mutation Rate Evolution Drives Immune Escape In Mismatch Repair-Deficient Cancer},
-	url = {https://www.biorxiv.org/content/early/2022/03/07/2022.03.06.482973},
-	year = {2022},
-	bdsk-url-1 = {https://www.biorxiv.org/content/early/2022/03/07/2022.03.06.482973},
-	bdsk-url-2 = {https://doi.org/10.1101/2022.03.06.482973}}
 
 @article{Hockings2023.07.21.549688,
 	abstract = {Drug resistance results in poor outcomes for most patients with metastatic cancer. Adaptive Therapy (AT) proposes to address this by exploiting presumed fitness costs incurred by drug-resistant cells when drug is absent, and prescribing dose reductions to allow fitter, sensitive cells to re-grow and re- sensitise the tumour. However, empirical evidence for treatment-induced fitness change is lacking. We show that fitness costs in chemotherapy-resistant ovarian cancer cause selective decline and apoptosis of resistant populations in low-resource conditions. Moreover, carboplatin AT caused fluctuations in sensitive/resistant tumour population size in vitro and significantly extended survival of tumour-bearing mice. In sequential blood-derived cell-free DNA and tumour samples obtained longitudinally from ovarian cancer patients during treatment, we inferred resistant cancer cell population size through therapy and observed it correlated strongly with disease burden. These data have enabled us to launch a multicentre, phase 2 randomised controlled trial (ACTOv) to evaluate AT in ovarian cancer.Competing Interest StatementThe authors have declared no competing interest.},
